fjern MaxPermSize, pga "Ignoring option MaxPermSize; support was removed in 8.0"